--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,11 @@
 <resources>
     <color name="status_bar_color">#FF000000</color>
     <color name="layout_border_color">#FF111111</color>
+    <color name="purple_200">#C997EC</color>
+    <color name="purple_500">#A364CF</color>
+    <color name="purple_700">#8C3CC5</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="teal_200">#008080</color>
+    <color name="teal_700">#067373</color>
 </resources>
